// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home When user is logged in renders home page with button of LogOut 1`] = `
Array [
  <nav
    className="navbar is-dark"
  >
    <div
      className="container"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="/"
        >
          <img
            alt="\\\\"
            className="d-inline-block align-top"
            src="https://img.icons8.com/emoji/452/orange-book.png"
          />
        </a>
        <div
          className="navbar-burger navbar-dropdown "
          data-target="navMenuColorblack-example"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        className="navbar-menu "
        id="navMenuColorblack-example"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          <a
            className="navbar-item"
            href="/users/me"
            onClick={[Function]}
          >
            My Profile
          </a>
          
          <a
            className="navbar-item"
            href="/books"
            onClick={[Function]}
          >
            Books
          </a>
          <a
            className="navbar-item"
            href="https://github.com/IIC2513-2021-1/grupo-demaciagang-p2-frontend"
            target="_blanck"
          >
             About Us
          </a>
          <a
            className="navbar-item"
            href="/chileNecesitaAJoseAntonioKast"
          >
            <img
              alt="\\\\"
              className="d-inline-block align-top"
              height="80"
              src="https://cdn.pixabay.com/photo/2013/07/12/17/50/bookmark-152545_960_720.png"
              width="40"
            />
          </a>
          <div
            className="navbar-item has-dropdown is-hoverable"
          >
            <p
              className="navbar-link"
            >
              Testman
              <div
                className="navbar-dropdown"
              >
                <a
                  className="navbar-item"
                  href="/users/my_profile"
                  onClick={[Function]}
                >
                  Profile
                   
                   
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z"
                    />
                  </svg>
                </a>
                <a
                  className="navbar-item"
                  onClick={[Function]}
                  type="button"
                >
                  Log Out
                   
                   
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                    />
                  </svg>
                </a>
              </div>
            </p>
          </div>
        </div>
      </div>
    </div>
  </nav>,
  <div>
    <h1
      className="title"
    >
      Welcome to Bookkers
    </h1>
    <div
      className="notification is-danger"
    >
      <button
        className="button is-danger"
        type="submit"
      >
        <strong>
          Warning!!
        </strong>
         
        <br />
         
        Están de baja estas vistas (sorry) :(
      </button>
    </div>
    <img
      alt=""
      src="https://i.ytimg.com/vi/6Z0lStsM6pA/maxresdefault.jpg"
    />
    <div
      className="buttons"
    >
      <button
        className="button is-primary"
        type="submit"
      >
        Primary
      </button>
      <button
        className="button is-link"
        type="submit"
      >
        Link
      </button>
    </div>
    <div
      className="buttons"
    >
      <button
        className="button is-info"
        type="submit"
      >
        Info
      </button>
      <button
        className="button is-success"
        type="submit"
      >
        Success
      </button>
      <button
        className="button is-warning"
        type="submit"
      >
        Warning
      </button>
      <button
        className="button is-danger"
        type="submit"
      >
        Danger
      </button>
    </div>
  </div>,
  <footer
    className="footer"
  >
    <div
      className="content has-text-centered"
    >
      <a
        className="navbar-item"
        href="https://www.instagram.com/bastian_hilcker/"
        target="_blanck"
      >
        Check our Instagram
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1 717.1 625.5 717.1 512 625.5 306.9 512 306.9zm0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7 645.3 438.6 645.3 512 585.4 645.3 512 645.3zm213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9 47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zm-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840c-58.3 0-183.3 4.7-235.9-16.1-18.2-7.3-31.8-16.1-45.8-30.2-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512c0-58.3-4.7-183.3 16.1-235.9 7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2 14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512c0 58.3 4.7 183.2-16.2 235.8z"
          />
        </svg>
      </a>
    </div>
  </footer>,
]
`;

exports[`Home When user is not logged in renders home page with button of LogIn 1`] = `
Array [
  <nav
    className="navbar is-dark"
  >
    <div
      className="container"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="/"
        >
          <img
            alt="\\\\"
            className="d-inline-block align-top"
            src="https://img.icons8.com/emoji/452/orange-book.png"
          />
        </a>
        <div
          className="navbar-burger navbar-dropdown "
          data-target="navMenuColorblack-example"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        className="navbar-menu "
        id="navMenuColorblack-example"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          
          <a
            className="navbar-item"
            href="/books"
            onClick={[Function]}
          >
            Books
          </a>
          <a
            className="navbar-item"
            href="https://github.com/IIC2513-2021-1/grupo-demaciagang-p2-frontend"
            target="_blanck"
          >
             About Us
          </a>
          <a
            className="navbar-item"
            href="/chileNecesitaAJoseAntonioKast"
          >
            <img
              alt="\\\\"
              className="d-inline-block align-top"
              height="80"
              src="https://cdn.pixabay.com/photo/2013/07/12/17/50/bookmark-152545_960_720.png"
              width="40"
            />
          </a>
          <a
            className="navbar-item"
            href="/login"
            onClick={[Function]}
          >
            Log In
          </a>
          <a
            className="navbar-item"
            href="/signup"
            onClick={[Function]}
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
  </nav>,
  <div>
    <h1
      className="title"
    >
      Welcome to Bookkers
    </h1>
    <div
      className="notification is-danger"
    >
      <button
        className="button is-danger"
        type="submit"
      >
        <strong>
          Warning!!
        </strong>
         
        <br />
         
        Están de baja estas vistas (sorry) :(
      </button>
    </div>
    <img
      alt=""
      src="https://i.ytimg.com/vi/6Z0lStsM6pA/maxresdefault.jpg"
    />
    <div
      className="buttons"
    >
      <button
        className="button is-primary"
        type="submit"
      >
        Primary
      </button>
      <button
        className="button is-link"
        type="submit"
      >
        Link
      </button>
    </div>
    <div
      className="buttons"
    >
      <button
        className="button is-info"
        type="submit"
      >
        Info
      </button>
      <button
        className="button is-success"
        type="submit"
      >
        Success
      </button>
      <button
        className="button is-warning"
        type="submit"
      >
        Warning
      </button>
      <button
        className="button is-danger"
        type="submit"
      >
        Danger
      </button>
    </div>
  </div>,
  <footer
    className="footer"
  >
    <div
      className="content has-text-centered"
    >
      <a
        className="navbar-item"
        href="https://www.instagram.com/bastian_hilcker/"
        target="_blanck"
      >
        Check our Instagram
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1 717.1 625.5 717.1 512 625.5 306.9 512 306.9zm0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7 645.3 438.6 645.3 512 585.4 645.3 512 645.3zm213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9 47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zm-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840c-58.3 0-183.3 4.7-235.9-16.1-18.2-7.3-31.8-16.1-45.8-30.2-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512c0-58.3-4.7-183.3 16.1-235.9 7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2 14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512c0 58.3 4.7 183.2-16.2 235.8z"
          />
        </svg>
      </a>
    </div>
  </footer>,
]
`;
